--- a/assets/style/projects.scss
+++ b/assets/style/projects.scss
@@ -15,9 +15,9 @@
 .card-project {
   display: flex;
   width: 100%;
-  height: 250px;
+  height: 280px;
   border-radius: 4px;
-  box-shadow: 0 4px 8px var(--box-shadow-color);
+  box-shadow: 0 4px 6px var(--bs-solid-blue-1);
   transition: all 0.2s ease-in;
 
   &:not(:first-child) {
@@ -185,7 +185,8 @@
     flex-direction: column;
     width: 50%;
     height: 100%;
-    background-color: var(--background-card-primary-color);
+    background-color: var(--bg-solid-blue-1);
+    color: var(--color-solid-blue-1);
     border-radius: 0 4px 4px 0;
     padding: 16px;
     transition: all 0.2s ease-in;
@@ -241,11 +242,11 @@
 
   &:hover {
     transform: scale(1.009);
-    box-shadow: 0 8px 8px $rl-app-black-30;
+    box-shadow: 0 6px 8px var(--bs-solid-black-1);
     cursor: pointer;
 
     .resume-project {
-      background-color: var(--background-card-primary-color-hover);
+      background-color: var(--bg-solid-card-hover-1);
     }
   }
 }
@@ -257,7 +258,6 @@
     height: auto;
     width: 100%;
     border-radius: 4px;
-    border: 1px solid $rl-app-blue-500;
 
     .images-project {
       width: 100%;
